<?xml version="1.0"?>
<package>
  <name>observation_synchronizer</name>
  <version>0.0.8</version>
  <description>The observation_synchronizer package</description>

  <maintainer email="nmichael@cmu.edu">Nathan Michael</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>scan_utils</build_depend>
  <build_depend>tof_utils</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>scan_utils</run_depend>
  <run_depend>tof_utils</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>quadrotor_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
